--- a/b_login.html
+++ b/b_login.html
@@ -15,7 +15,26 @@
         <div class="b_logo"></div>
     </div>
     <div class="b_content">
-        
+        <div class="b_banner">
+            <div class="b_logobox">
+                <div class="b_btn">
+                    <a href="javascript:;" class="b_btn1">账号登入</a>
+                    <span></span>
+                    <a href="javascript:;" class="b_btn2">扫码登入</a>
+                </div>
+                <div class="b_btn1Box">
+                    <div class="b_inp">
+                        <input type="text" id="user" name="user" placeholder="手机/邮箱/小米ID">
+                        <input type="password" id="password" name="password" placeholder="密码">
+                    </div>
+                    <div class="b_logo_btn"><a href="javascript:;">登入</a></div>
+                    <div class=""></div>
+                </div>
+                <div class="b_btn2Box">
+                    
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
