--- a/b_login.html
+++ b/b_login.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
     <link rel="stylesheet" href="./css/b_login.css">
     <title>小米账号-登录</title>
 </head>
+
 <body>
     <div class="b_header">
         <div class="b_logo"></div>
@@ -18,23 +20,72 @@
         <div class="b_banner">
             <div class="b_logobox">
                 <div class="b_btn">
-                    <a href="javascript:;" class="b_btn1">账号登入</a>
+                    <a href="javascript:;" class="b_btn1 col">账号登入</a>
                     <span></span>
                     <a href="javascript:;" class="b_btn2">扫码登入</a>
                 </div>
-                <div class="b_btn1Box">
+                <div class="b_btn1Box active">
                     <div class="b_inp">
                         <input type="text" id="user" name="user" placeholder="手机/邮箱/小米ID">
                         <input type="password" id="password" name="password" placeholder="密码">
                     </div>
-                    <div class="b_logo_btn"><a href="javascript:;">登入</a></div>
-                    <div class=""></div>
+                    <div class="b_logo_btn" name='login'><a href="javascript:;">登入</a></div>
+                    <div class="b_span clearfix">
+                        <div class="b_a1">
+                            <a href="">手机短信登入/注册</a>
+                        </div>
+                        <div class="b_a2">
+                            <a href="">立即注册</a>
+                            <span>|</span>
+                            <a href="">忘记密码?</a>
+                        </div>
+                    </div>
+                    <div class="b_hr">
+                        <hr>
+                        <span>其他登入方式</span>
+                    </div>
+                    <div class="b_icon">
+                        <a href="javascript:;">
+                            <i class="iconfont icon-QQ"></i>
+                        </a>
+                        <a href="javascript:;">
+                            <i class="iconfont icon-weibo"></i>
+                        </a>
+                        <a href="javascript:;">
+                            <i class="iconfont icon-zhifubao"></i>
+                        </a>
+                        <a href="javascript:;">
+                            <i class="iconfont icon-weixin"></i>
+                        </a>
+                    </div>
                 </div>
                 <div class="b_btn2Box">
-                    
+                    <div class="b_ma">
+                        <img src="//qr.m.jd.com/show?appid=133&amp;size=147&amp;t=1573126904165" alt="">
+                    </div>
+                    <div class="b_p">
+                        <p>使用<span>小米商城APP</span>扫一扫</p>
+                        <p>小米手机可打开「设置」>「小米帐号」扫码登录</p>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
+    <div class="b_footer">
+        <div class="b_a">
+            <a href="">简体</a>
+            <span>|</span>
+            <a href="">繁体</a>
+            <span>|</span>
+            <a href="">English</a>
+            <span>|</span>
+            <a href="">常见问题</a>
+            <span>|</span>
+            <a href="">隐私政策</a>
+        </div>
+        <p>小米公司版权所有-京ICP备10046444-京公网安备11010802020134号-京ICP证110507号</p>
+    </div>
 </body>
+<script src="./js/b_login.js"></script>
+
 </html>
