--- a/b_login.html
+++ b/b_login.html
@@ -32,12 +32,12 @@
                     <div class="b_logo_btn" name='login'><a href="javascript:;">登入</a></div>
                     <div class="b_span clearfix">
                         <div class="b_a1">
-                            <a href="">手机短信登入/注册</a>
+                            <a href="javascript:;">手机短信登入/注册</a>
                         </div>
                         <div class="b_a2">
-                            <a href="">立即注册</a>
+                            <a href="./b_register.html">立即注册</a>
                             <span>|</span>
-                            <a href="">忘记密码?</a>
+                            <a href="javascript:;">忘记密码?</a>
                         </div>
                     </div>
                     <div class="b_hr">
@@ -86,6 +86,7 @@
         <p>小米公司版权所有-京ICP备10046444-京公网安备11010802020134号-京ICP证110507号</p>
     </div>
 </body>
+<script src="./js/b_gj.js"></script>
 <script src="./js/b_login.js"></script>
 
 </html>
