--- a/common/footer.html
+++ b/common/footer.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./common/reset.css">
-    <link rel="stylesheet" href="./common/footer.css">
+    <link rel="stylesheet" href="./comm/reset.css">
+    <link rel="stylesheet" href="./comm/footer.css">
     <title>Document</title>
 </head>
 <body>
