--- a/b_shopcar.html
+++ b/b_shopcar.html
@@ -62,26 +62,31 @@
                 <div>操作</div>
             </div>
             <div class="b_splb clearfix">
-
-            </div>
-            <!-- <div class="b_gwccot clearfix">
-                <div>
-                    <input type="checkbox">
-                    <span></span>
-                </div>
-                <div><img src="img/b_gwcimg/a1.webp" alt=""></div>
-                <div>小米CC9 Pro 6GB+128GB</div>
-                <div>2799元</div>
-                <div>
-                    <div class="b_anniu">
-                        <a href="javascript:;">+</a>
-                        <input type="text" value="1" class="input">
-                        <a href="javascript:;">-</a>
+                <!-- <div class="b_gwccot clearfix">
+                    <div>
+                        <input type="checkbox">
+                        <span></span>
                     </div>
-                </div>
-                <div>2799元</div>
-                <div><span>X</span></div>
-            </div> -->
+                    <div><img src="img/b_gwcimg/a1.webp" alt=""></div>
+                    <div>小米CC9 Pro 6GB+128GB</div>
+                    <div>2799元</div>
+                    <div>
+                        <div class="b_anniu">
+                            <a href="javascript:;">+</a>
+                            <input type="text" value="1" class="input">
+                            <a href="javascript:;">-</a>
+                        </div>
+                    </div>
+                    <div>2799元</div>
+                    <div><span>X</span></div>
+                </div> -->
+            </div>
+            <div class="b_jiesuan clearfix">
+                <a href="">继续加购</a>
+                <span>共 <i class="b_b1">2</i> 件商品，已选择 <i class="b_b2">2</i> 件</span>
+                <div>合计：<em class="b_em">8000</em> 元</div>
+                <a href="./b_checkout">去结算</a>
+            </div>
         </div>
     </div>
     <!-- 为你推荐 -->
@@ -131,9 +136,9 @@
 <script src="./js/b_gj.js"></script>
 <script src="http://libs.baidu.com/jquery/2.0.3/jquery.min.js"></script>
 <script>
-$(function(){
-    $('.foot').load('./comm/footer.html')
-})
+    $(function () {
+        $('.foot').load('./comm/footer.html')
+    })
 </script>
 <script src="./js/b_shopcar.js"></script>
 
